Implemented old instance history